# Covid-Radiograhy-Diagnosis-API

./: .devcontainer.json  .gitignore  Dockerfile  README.md  covid-19-detection-inference-evaluation.ipynb  covid-19-detection-test-report.ipynb  inference-and-evaluation.ipynb  pyproject.toml
api/model/: CovidDetectron.py  CovidDiagnoser.py
app/: main.py  utils.py
assets/: backend-api.drawio  system-design.drawio
backend/: Dockerfile  README.md  app.py  config.py  requirements.txt  run.py
backend/db/: database.py  models.py
backend/endpoints/: diagnose.py  report.py
backend/inference/: covid_classification.py  covid_detection.py
frontend/: Dockerfile  README.md  app.py  main.py
notebooks/: interactive-eda.ipynb  rough-notebook.ipynb
notebooks/cascade-rcnn-detection/: covid-19-detection-test-report.ipynb  inference-and-evaluation.ipynb  model-training.ipynb  training-log-viz.ipynb  utils.py  val-log.csv
output/: None.log.json
output/cascade-rcnn-detection/: pascal_rec.pickle  precision-recall.csv  val.log.csv
output/covid-test-det/: covid-19-test-det.json
output/covid-test-gts/: covid-19-test-gt.json
